kubernetes/cmsweb-istio/service-mesh/httpgo.yaml
apiVersion: v1 # istio version
kind: Service
metadata:
  name: httpgo
  namespace: dev
spec:
  type: ClusterIP
  ports:
  - port: 8888
    protocol: TCP
    name: http
  selector:
    app: httpgo
---
###
### Deployment using v1 version
###
apiVersion: apps/v1 # istio version
kind: Deployment
metadata:
  name: httpgo-v1
  namespace: dev
  labels:
    app: httpgo
    version: v1 # istio version
spec:
  selector:
    matchLabels:
      app: httpgo
      version: v1 # istio version
  replicas: 1
  template:
    metadata:
      labels:
        app: httpgo
        version: v1 # istio version
    spec:
      serviceAccountName: httpgo-account
      containers:
      - image: cmssw/httpgo
        name: httpgo
        ports:
        - containerPort: 8888
---
###
### Deployment using v2 version
###
apiVersion: apps/v1 # istio version
kind: Deployment
metadata:
  name: httpgo-v2
  namespace: dev
  labels:
    app: httpgo
    version: v2 # istio version
spec:
  selector:
    matchLabels:
      app: httpgo
      version: v2 # istio version
  replicas: 1
  template:
    metadata:
      labels:
        app: httpgo
        version: v2 # istio version
    spec:
      serviceAccountName: httpgo-account
      containers:
      - image: cmssw/httpgo
        name: httpgo
        ports:
        - containerPort: 8888
