kubernetes/cmsweb-istio/service-mesh/httpgo-destinations.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: httpgo
  namespace: dev
spec:
  host: httpgo
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
